// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  color: var(--bb-palette-primary, #000000)!important;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default, #000000);
  border-radius: 6px;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-3[disabled],
.emotion-3[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200, #000000) 0px 0px 0px 1px,var(--bb-palette-gray100, #000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-3:hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-3:hover:active {
  background-color: var(--bb-palette-white800, #000000);
}

.emotion-7 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-10 {
  margin-left: 0.5em;
  margin-right: -0.25em;
}

<div
  class="emotion-0 emotion-1 emotion-2 test bb-Box bb-DropdownMenu"
>
  <button
    aria-controls="test"
    aria-expanded="false"
    aria-haspopup="menu"
    class="emotion-3 emotion-1 emotion-5 emotion-0 bb-Box bb-DropdownMenuButton bb-Button"
    type="button"
  >
    Actions
    <svg
      aria-hidden="true"
      class="emotion-7 emotion-1 emotion-5 emotion-10 bb-ButtonIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 448 512"
    >
      <path
        d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`overrides DropdownMenu.Button.styles.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default, #000000);
  border-radius: 6px;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-3[disabled],
.emotion-3[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200, #000000) 0px 0px 0px 1px,var(--bb-palette-gray100, #000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-3:hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-3:hover:active {
  background-color: var(--bb-palette-white800, #000000);
}

.emotion-6 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-7 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-10 {
  margin-left: 0.5em;
  margin-right: -0.25em;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-DropdownMenu"
>
  <button
    aria-controls="test"
    aria-expanded="false"
    aria-haspopup="menu"
    class="emotion-3 emotion-1 emotion-2 emotion-6 bb-Box bb-DropdownMenuButton bb-Button"
    type="button"
  >
    Actions
    <svg
      aria-hidden="true"
      class="emotion-7 emotion-1 emotion-2 emotion-10 bb-ButtonIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 448 512"
    >
      <path
        d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`overrides DropdownMenu.Divider.styles.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default, #000000);
  border-radius: 6px;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-3[disabled],
.emotion-3[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200, #000000) 0px 0px 0px 1px,var(--bb-palette-gray100, #000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-3:hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-3:hover:active {
  background-color: var(--bb-palette-white800, #000000);
}

.emotion-7 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-10 {
  margin-left: 0.5em;
  margin-right: -0.25em;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-DropdownMenu"
>
  <button
    aria-controls="test"
    aria-expanded="false"
    aria-haspopup="menu"
    class="emotion-3 emotion-1 emotion-2 emotion-0 bb-Box bb-DropdownMenuButton bb-Button"
    type="button"
  >
    Actions
    <svg
      aria-hidden="true"
      class="emotion-7 emotion-1 emotion-2 emotion-10 bb-ButtonIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 448 512"
    >
      <path
        d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`overrides DropdownMenu.Group.styles.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default, #000000);
  border-radius: 6px;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-3[disabled],
.emotion-3[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200, #000000) 0px 0px 0px 1px,var(--bb-palette-gray100, #000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-3:hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-3:hover:active {
  background-color: var(--bb-palette-white800, #000000);
}

.emotion-7 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-10 {
  margin-left: 0.5em;
  margin-right: -0.25em;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-DropdownMenu"
>
  <button
    aria-controls="test"
    aria-expanded="false"
    aria-haspopup="menu"
    class="emotion-3 emotion-1 emotion-2 emotion-0 bb-Box bb-DropdownMenuButton bb-Button"
    type="button"
  >
    Actions
    <svg
      aria-hidden="true"
      class="emotion-7 emotion-1 emotion-2 emotion-10 bb-ButtonIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 448 512"
    >
      <path
        d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`overrides DropdownMenu.Item.styles.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default, #000000);
  border-radius: 6px;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-3[disabled],
.emotion-3[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200, #000000) 0px 0px 0px 1px,var(--bb-palette-gray100, #000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-3:hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-3:hover:active {
  background-color: var(--bb-palette-white800, #000000);
}

.emotion-7 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-10 {
  margin-left: 0.5em;
  margin-right: -0.25em;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-DropdownMenu"
>
  <button
    aria-controls="test"
    aria-expanded="false"
    aria-haspopup="menu"
    class="emotion-3 emotion-1 emotion-2 emotion-0 bb-Box bb-DropdownMenuButton bb-Button"
    type="button"
  >
    Actions
    <svg
      aria-hidden="true"
      class="emotion-7 emotion-1 emotion-2 emotion-10 bb-ButtonIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 448 512"
    >
      <path
        d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`overrides DropdownMenu.Popover.styles.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default, #000000);
  border-radius: 6px;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-3[disabled],
.emotion-3[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200, #000000) 0px 0px 0px 1px,var(--bb-palette-gray100, #000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-3:hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-3:hover:active {
  background-color: var(--bb-palette-white800, #000000);
}

.emotion-7 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-10 {
  margin-left: 0.5em;
  margin-right: -0.25em;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-DropdownMenu"
>
  <button
    aria-controls="test"
    aria-expanded="false"
    aria-haspopup="menu"
    class="emotion-3 emotion-1 emotion-2 emotion-0 bb-Box bb-DropdownMenuButton bb-Button"
    type="button"
  >
    Actions
    <svg
      aria-hidden="true"
      class="emotion-7 emotion-1 emotion-2 emotion-10 bb-ButtonIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 448 512"
    >
      <path
        d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`overrides DropdownMenu.styles.base should render correctly 1`] = `
.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default, #000000);
  border-radius: 6px;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-3[disabled],
.emotion-3[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200, #000000) 0px 0px 0px 1px,var(--bb-palette-gray100, #000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-3:hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-3:hover:active {
  background-color: var(--bb-palette-white800, #000000);
}

.emotion-7 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-10 {
  margin-left: 0.5em;
  margin-right: -0.25em;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-DropdownMenu"
>
  <button
    aria-controls="test"
    aria-expanded="false"
    aria-haspopup="menu"
    class="emotion-3 emotion-1 emotion-2 emotion-6 bb-Box bb-DropdownMenuButton bb-Button"
    type="button"
  >
    Actions
    <svg
      aria-hidden="true"
      class="emotion-7 emotion-1 emotion-2 emotion-10 bb-ButtonIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 448 512"
    >
      <path
        d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default, #000000);
  border-radius: 6px;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-3[disabled],
.emotion-3[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200, #000000) 0px 0px 0px 1px,var(--bb-palette-gray100, #000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-3:hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-3:hover:active {
  background-color: var(--bb-palette-white800, #000000);
}

.emotion-7 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-10 {
  margin-left: 0.5em;
  margin-right: -0.25em;
}

.emotion-11 {
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02)!important;
  width: 100%;
  padding: 0.5rem 0;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-12 {
  background-color: var(--bb-palette-background, #000000);
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02);
}

.emotion-12[hidden] {
  display: inherit!important;
  visibility: hidden!important;
}

.emotion-12:focus {
  outline: none;
  box-shadow: var(--bb-palette-primary200, #000000) 0px 0px 0px 3px;
}

.emotion-14 {
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02);
}

.emotion-15 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-15 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-15:hover {
  color: unset;
  fill: unset;
}

.emotion-15[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-15:not(:disabled):focus {
  outline: unset;
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-15:not(:disabled):hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-15:not(:disabled):focus:active,
.emotion-15:not(:disabled):hover:active {
  background-color: var(--bb-palette-white700, #000000);
}

.emotion-15 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-21 {
  margin-right: 0.5rem;
}

.emotion-38 {
  color: var(--bb-palette-danger, #000000)!important;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-DropdownMenu"
>
  <button
    aria-controls="test"
    aria-expanded="true"
    aria-haspopup="menu"
    class="emotion-3 emotion-1 emotion-2 emotion-0 bb-Box bb-DropdownMenuButton bb-Button"
    type="button"
  >
    Actions
    <svg
      aria-hidden="true"
      class="emotion-7 emotion-1 emotion-2 emotion-10 bb-ButtonIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 448 512"
    >
      <path
        d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
  <div
    aria-orientation="vertical"
    class="emotion-11 emotion-12 emotion-1 emotion-14 bb-Box bb-DropdownMenuPopover"
    data-dialog="true"
    id="test"
    role="menu"
    tabindex="-1"
  >
    <div
      class="emotion-15 emotion-1 emotion-2 bb-Box bb-DropdownMenuItem"
      id="test-1"
      role="menuitem"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="emotion-7 emotion-1 emotion-2 emotion-21 bb-DropdownMenuItemIcon bb-Box bb-Icon"
        role="img"
        viewBox="0 0 0 0"
      />
      Edit
    </div>
    <div
      class="emotion-15 emotion-1 emotion-2 bb-Box bb-DropdownMenuItem"
      id="test-2"
      role="menuitem"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        class="emotion-7 emotion-1 emotion-2 emotion-21 bb-DropdownMenuItemIcon bb-Box bb-Icon"
        role="img"
        viewBox="0 0 0 0"
      />
      Share
    </div>
    <div
      class="emotion-15 emotion-1 emotion-2 bb-Box bb-DropdownMenuItem"
      id="test-3"
      role="menuitem"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        class="emotion-7 emotion-1 emotion-2 emotion-21 bb-DropdownMenuItemIcon bb-Box bb-Icon"
        role="img"
        viewBox="0 0 0 0"
      />
      Rename
    </div>
    <div
      class="emotion-15 emotion-1 emotion-38 bb-Box bb-DropdownMenuItem"
      id="test-4"
      role="menuitem"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        class="emotion-7 emotion-1 emotion-2 emotion-21 bb-DropdownMenuItemIcon bb-Box bb-Icon"
        role="img"
        viewBox="0 0 0 0"
      />
      Delete
    </div>
  </div>
</div>
`;

exports[`props should render correctly for CSS props 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  background-color: var(--bb-palette-red, #ff0000)!important;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default, #000000);
  border-radius: 6px;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-3[disabled],
.emotion-3[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200, #000000) 0px 0px 0px 1px,var(--bb-palette-gray100, #000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-3:hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-3:hover:active {
  background-color: var(--bb-palette-white800, #000000);
}

.emotion-7 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-10 {
  margin-left: 0.5em;
  margin-right: -0.25em;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-DropdownMenu"
>
  <button
    aria-controls="test"
    aria-expanded="false"
    aria-haspopup="menu"
    class="emotion-3 emotion-1 emotion-5 emotion-0 bb-Box bb-DropdownMenuButton bb-Button"
    type="button"
  >
    Actions
    <svg
      aria-hidden="true"
      class="emotion-7 emotion-1 emotion-5 emotion-10 bb-ButtonIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 448 512"
    >
      <path
        d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`props should render correctly for a controlled option group 1`] = `null`;

exports[`props should render correctly for an invisible dropdown menu 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default, #000000);
  border-radius: 6px;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-3[disabled],
.emotion-3[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200, #000000) 0px 0px 0px 1px,var(--bb-palette-gray100, #000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-3:hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-3:hover:active {
  background-color: var(--bb-palette-white800, #000000);
}

.emotion-7 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-10 {
  margin-left: 0.5em;
  margin-right: -0.25em;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-DropdownMenu"
>
  <button
    aria-controls="test"
    aria-expanded="false"
    aria-haspopup="menu"
    class="emotion-3 emotion-1 emotion-2 emotion-0 bb-Box bb-DropdownMenuButton bb-Button"
    type="button"
  >
    Actions
    <svg
      aria-hidden="true"
      class="emotion-7 emotion-1 emotion-2 emotion-10 bb-ButtonIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 448 512"
    >
      <path
        d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`props should render correctly for an uncontrolled option group 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default, #000000);
  border-radius: 6px;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-3[disabled],
.emotion-3[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200, #000000) 0px 0px 0px 1px,var(--bb-palette-gray100, #000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-3:hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-3:hover:active {
  background-color: var(--bb-palette-white800, #000000);
}

.emotion-7 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-10 {
  margin-left: 0.5em;
  margin-right: -0.25em;
}

.emotion-11 {
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02)!important;
  width: 100%;
  padding: 0.5rem 0;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-12 {
  background-color: var(--bb-palette-background, #000000);
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02);
}

.emotion-12[hidden] {
  display: inherit!important;
  visibility: hidden!important;
}

.emotion-12:focus {
  outline: none;
  box-shadow: var(--bb-palette-primary200, #000000) 0px 0px 0px 3px;
}

.emotion-14 {
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02);
}

.emotion-16+.emotion-16 {
  margin-top: 1rem;
}

.emotion-21 {
  color: var(--bb-palette-text100, #000000);
  font-size: 0.75rem;
  font-weight: 600;
  letter-spacing: 0.025em;
  padding: 0.5rem 1rem;
  padding-top: 0.25rem;
  text-transform: uppercase;
}

.emotion-22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-22[aria-checked="true"] {
  color: var(--bb-palette-primary, #000000);
}

.emotion-23 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-23 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-23:hover {
  color: unset;
  fill: unset;
}

.emotion-23[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-23:not(:disabled):focus {
  outline: unset;
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-23:not(:disabled):hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-23:not(:disabled):focus:active,
.emotion-23:not(:disabled):hover:active {
  background-color: var(--bb-palette-white700, #000000);
}

.emotion-23 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-28 {
  margin-right: 0.5rem;
  width: 16px;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-DropdownMenu"
>
  <button
    aria-controls="test"
    aria-expanded="true"
    aria-haspopup="menu"
    class="emotion-3 emotion-1 emotion-2 emotion-0 bb-Box bb-DropdownMenuButton bb-Button"
    type="button"
  >
    Actions
    <svg
      aria-hidden="true"
      class="emotion-7 emotion-1 emotion-2 emotion-10 bb-ButtonIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 448 512"
    >
      <path
        d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
  <div
    aria-orientation="vertical"
    class="emotion-11 emotion-12 emotion-1 emotion-14 bb-Box bb-DropdownMenuPopover"
    data-dialog="true"
    id="test"
    role="menu"
    tabindex="-1"
  >
    <div
      aria-labelledby="id-test"
      class="emotion-15 emotion-16 emotion-1 emotion-2 bb-Box bb-DropdownMenuGroup bb-DropdownMenuOptionGroup"
      role="group"
    >
      <div
        class="emotion-1 emotion-2 emotion-21 bb-Box bb-DropdownMenuGroupTitle"
        id="id-test"
      >
        Sort by
      </div>
      <div
        aria-checked="true"
        class="emotion-22 emotion-23 emotion-1 emotion-2 bb-Box bb-DropdownMenuItem bb-DropdownMenuOptionItem"
        id="test-1"
        role="menuitem"
        tabindex="0"
      >
        <div
          class="emotion-1 emotion-2 emotion-28 bb-DropdownMenuOptionItemIconWrapper bb-Box"
        >
          <svg
            aria-hidden="true"
            class="emotion-7 emotion-1 emotion-2 bb-Box bb-Icon"
            role="img"
            viewBox="0 0 16 16"
          >
            <path
              d="M14 3c-.28 0-.53.11-.71.29L6 10.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l8-8A1.003 1.003 0 0014 3z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        Ascending
      </div>
      <div
        aria-checked="false"
        class="emotion-22 emotion-23 emotion-1 emotion-2 bb-Box bb-DropdownMenuItem bb-DropdownMenuOptionItem"
        id="test-2"
        role="menuitem"
        tabindex="-1"
      >
        <div
          class="emotion-1 emotion-2 emotion-28 bb-DropdownMenuOptionItemIconWrapper bb-Box"
        />
        Descending
      </div>
    </div>
    <div
      aria-labelledby="id-test"
      class="emotion-15 emotion-16 emotion-1 emotion-2 bb-Box bb-DropdownMenuGroup bb-DropdownMenuOptionGroup"
      role="group"
    >
      <div
        class="emotion-1 emotion-2 emotion-21 bb-Box bb-DropdownMenuGroupTitle"
        id="id-test"
      >
        Countries
      </div>
      <div
        aria-checked="true"
        class="emotion-22 emotion-23 emotion-1 emotion-2 bb-Box bb-DropdownMenuItem bb-DropdownMenuOptionItem"
        id="test-3"
        role="menuitem"
        tabindex="-1"
      >
        <div
          class="emotion-1 emotion-2 emotion-28 bb-DropdownMenuOptionItemIconWrapper bb-Box"
        >
          <svg
            aria-hidden="true"
            class="emotion-7 emotion-1 emotion-2 bb-Box bb-Icon"
            role="img"
            viewBox="0 0 16 16"
          >
            <path
              d="M14 3c-.28 0-.53.11-.71.29L6 10.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l8-8A1.003 1.003 0 0014 3z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        Australia
      </div>
      <div
        aria-checked="false"
        class="emotion-22 emotion-23 emotion-1 emotion-2 bb-Box bb-DropdownMenuItem bb-DropdownMenuOptionItem"
        id="test-4"
        role="menuitem"
        tabindex="-1"
      >
        <div
          class="emotion-1 emotion-2 emotion-28 bb-DropdownMenuOptionItemIconWrapper bb-Box"
        />
        United States
      </div>
      <div
        aria-checked="true"
        class="emotion-22 emotion-23 emotion-1 emotion-2 bb-Box bb-DropdownMenuItem bb-DropdownMenuOptionItem"
        id="test-5"
        role="menuitem"
        tabindex="-1"
      >
        <div
          class="emotion-1 emotion-2 emotion-28 bb-DropdownMenuOptionItemIconWrapper bb-Box"
        >
          <svg
            aria-hidden="true"
            class="emotion-7 emotion-1 emotion-2 bb-Box bb-Icon"
            role="img"
            viewBox="0 0 16 16"
          >
            <path
              d="M14 3c-.28 0-.53.11-.71.29L6 10.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l8-8A1.003 1.003 0 0014 3z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        India
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render correctly with groups 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default, #000000);
  border-radius: 6px;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-3[disabled],
.emotion-3[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200, #000000) 0px 0px 0px 1px,var(--bb-palette-gray100, #000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-3:hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-3:hover:active {
  background-color: var(--bb-palette-white800, #000000);
}

.emotion-7 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-10 {
  margin-left: 0.5em;
  margin-right: -0.25em;
}

.emotion-11 {
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02)!important;
  width: 100%;
  padding: 0.5rem 0;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-12 {
  background-color: var(--bb-palette-background, #000000);
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02);
}

.emotion-12[hidden] {
  display: inherit!important;
  visibility: hidden!important;
}

.emotion-12:focus {
  outline: none;
  box-shadow: var(--bb-palette-primary200, #000000) 0px 0px 0px 3px;
}

.emotion-14 {
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02);
}

.emotion-15+.emotion-15 {
  margin-top: 1rem;
}

.emotion-20 {
  color: var(--bb-palette-text100, #000000);
  font-size: 0.75rem;
  font-weight: 600;
  letter-spacing: 0.025em;
  padding: 0.5rem 1rem;
  padding-top: 0.25rem;
  text-transform: uppercase;
}

.emotion-21 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-21 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-21:hover {
  color: unset;
  fill: unset;
}

.emotion-21[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-21:not(:disabled):focus {
  outline: unset;
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-21:not(:disabled):hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-21:not(:disabled):focus:active,
.emotion-21:not(:disabled):hover:active {
  background-color: var(--bb-palette-white700, #000000);
}

.emotion-21 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-27 {
  margin-right: 0.5rem;
}

.emotion-44 {
  color: var(--bb-palette-danger, #000000)!important;
}

.emotion-49.emotion-49 {
  margin: 0.5rem 0;
}

.emotion-50 {
  border: 1px solid var(--bb-palette-white800, #000000);
  border-width: 0 0 1px 0;
  padding: 0;
  width: auto;
  height: 0;
}

.emotion-50[aria-orientation="vertical"] {
  border-width: 0 1px 0 0;
  width: 0;
  height: auto;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-DropdownMenu"
>
  <button
    aria-controls="test"
    aria-expanded="true"
    aria-haspopup="menu"
    class="emotion-3 emotion-1 emotion-2 emotion-0 bb-Box bb-DropdownMenuButton bb-Button"
    type="button"
  >
    Actions
    <svg
      aria-hidden="true"
      class="emotion-7 emotion-1 emotion-2 emotion-10 bb-ButtonIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 448 512"
    >
      <path
        d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
  <div
    aria-orientation="vertical"
    class="emotion-11 emotion-12 emotion-1 emotion-14 bb-Box bb-DropdownMenuPopover"
    data-dialog="true"
    id="test"
    role="menu"
    tabindex="-1"
  >
    <div
      aria-labelledby="id-test"
      class="emotion-15 emotion-1 emotion-2 bb-Box bb-DropdownMenuGroup"
      role="group"
    >
      <div
        class="emotion-1 emotion-2 emotion-20 bb-Box bb-DropdownMenuGroupTitle"
        id="id-test"
      >
        Actions
      </div>
      <div
        class="emotion-21 emotion-1 emotion-2 bb-Box bb-DropdownMenuItem"
        id="test-1"
        role="menuitem"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          class="emotion-7 emotion-1 emotion-2 emotion-27 bb-DropdownMenuItemIcon bb-Box bb-Icon"
          role="img"
          viewBox="0 0 0 0"
        />
        Edit
      </div>
      <div
        class="emotion-21 emotion-1 emotion-2 bb-Box bb-DropdownMenuItem"
        id="test-2"
        role="menuitem"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="emotion-7 emotion-1 emotion-2 emotion-27 bb-DropdownMenuItemIcon bb-Box bb-Icon"
          role="img"
          viewBox="0 0 0 0"
        />
        Share
      </div>
      <div
        class="emotion-21 emotion-1 emotion-2 bb-Box bb-DropdownMenuItem"
        id="test-3"
        role="menuitem"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="emotion-7 emotion-1 emotion-2 emotion-27 bb-DropdownMenuItemIcon bb-Box bb-Icon"
          role="img"
          viewBox="0 0 0 0"
        />
        Rename
      </div>
      <div
        class="emotion-21 emotion-1 emotion-44 bb-Box bb-DropdownMenuItem"
        id="test-4"
        role="menuitem"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="emotion-7 emotion-1 emotion-2 emotion-27 bb-DropdownMenuItemIcon bb-Box bb-Icon"
          role="img"
          viewBox="0 0 0 0"
        />
        Delete
      </div>
    </div>
    <div
      aria-orientation="horizontal"
      class="emotion-49 emotion-50 emotion-1 emotion-2 bb-Box bb-Divider bb-DropdownMenuDivider"
      role="separator"
    />
    <div
      aria-labelledby="id-test"
      class="emotion-15 emotion-1 emotion-2 bb-Box bb-DropdownMenuGroup"
      role="group"
    >
      <div
        class="emotion-1 emotion-2 emotion-20 bb-Box bb-DropdownMenuGroupTitle"
        id="id-test"
      >
        Links
      </div>
      <div
        class="emotion-21 emotion-1 emotion-2 bb-Box bb-DropdownMenuItem"
        id="test-5"
        role="menuitem"
        tabindex="-1"
      >
        Test
      </div>
    </div>
  </div>
</div>
`;

exports[`theming DropdownMenu.Button.styles.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default, #000000);
  border-radius: 6px;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-3[disabled],
.emotion-3[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200, #000000) 0px 0px 0px 1px,var(--bb-palette-gray100, #000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-3:hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-3:hover:active {
  background-color: var(--bb-palette-white800, #000000);
}

.emotion-6 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-7 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-10 {
  margin-left: 0.5em;
  margin-right: -0.25em;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-DropdownMenu"
>
  <button
    aria-controls="test"
    aria-expanded="false"
    aria-haspopup="menu"
    class="emotion-3 emotion-1 emotion-2 emotion-6 bb-Box bb-DropdownMenuButton bb-Button"
    type="button"
  >
    Actions
    <svg
      aria-hidden="true"
      class="emotion-7 emotion-1 emotion-2 emotion-10 bb-ButtonIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 448 512"
    >
      <path
        d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`theming DropdownMenu.Divider.styles.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default, #000000);
  border-radius: 6px;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-3[disabled],
.emotion-3[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200, #000000) 0px 0px 0px 1px,var(--bb-palette-gray100, #000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-3:hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-3:hover:active {
  background-color: var(--bb-palette-white800, #000000);
}

.emotion-7 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-10 {
  margin-left: 0.5em;
  margin-right: -0.25em;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-DropdownMenu"
>
  <button
    aria-controls="test"
    aria-expanded="false"
    aria-haspopup="menu"
    class="emotion-3 emotion-1 emotion-2 emotion-0 bb-Box bb-DropdownMenuButton bb-Button"
    type="button"
  >
    Actions
    <svg
      aria-hidden="true"
      class="emotion-7 emotion-1 emotion-2 emotion-10 bb-ButtonIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 448 512"
    >
      <path
        d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`theming DropdownMenu.Group.styles.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default, #000000);
  border-radius: 6px;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-3[disabled],
.emotion-3[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200, #000000) 0px 0px 0px 1px,var(--bb-palette-gray100, #000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-3:hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-3:hover:active {
  background-color: var(--bb-palette-white800, #000000);
}

.emotion-7 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-10 {
  margin-left: 0.5em;
  margin-right: -0.25em;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-DropdownMenu"
>
  <button
    aria-controls="test"
    aria-expanded="false"
    aria-haspopup="menu"
    class="emotion-3 emotion-1 emotion-2 emotion-0 bb-Box bb-DropdownMenuButton bb-Button"
    type="button"
  >
    Actions
    <svg
      aria-hidden="true"
      class="emotion-7 emotion-1 emotion-2 emotion-10 bb-ButtonIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 448 512"
    >
      <path
        d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`theming DropdownMenu.Item.styles.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default, #000000);
  border-radius: 6px;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-3[disabled],
.emotion-3[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200, #000000) 0px 0px 0px 1px,var(--bb-palette-gray100, #000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-3:hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-3:hover:active {
  background-color: var(--bb-palette-white800, #000000);
}

.emotion-7 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-10 {
  margin-left: 0.5em;
  margin-right: -0.25em;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-DropdownMenu"
>
  <button
    aria-controls="test"
    aria-expanded="false"
    aria-haspopup="menu"
    class="emotion-3 emotion-1 emotion-2 emotion-0 bb-Box bb-DropdownMenuButton bb-Button"
    type="button"
  >
    Actions
    <svg
      aria-hidden="true"
      class="emotion-7 emotion-1 emotion-2 emotion-10 bb-ButtonIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 448 512"
    >
      <path
        d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`theming DropdownMenu.Popover.styles.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default, #000000);
  border-radius: 6px;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-3[disabled],
.emotion-3[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200, #000000) 0px 0px 0px 1px,var(--bb-palette-gray100, #000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-3:hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-3:hover:active {
  background-color: var(--bb-palette-white800, #000000);
}

.emotion-7 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-10 {
  margin-left: 0.5em;
  margin-right: -0.25em;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-DropdownMenu"
>
  <button
    aria-controls="test"
    aria-expanded="false"
    aria-haspopup="menu"
    class="emotion-3 emotion-1 emotion-2 emotion-0 bb-Box bb-DropdownMenuButton bb-Button"
    type="button"
  >
    Actions
    <svg
      aria-hidden="true"
      class="emotion-7 emotion-1 emotion-2 emotion-10 bb-ButtonIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 448 512"
    >
      <path
        d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`theming DropdownMenu.styles.base should render correctly 1`] = `
.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default, #000000);
  border-radius: 6px;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-3[disabled],
.emotion-3[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200, #000000) 0px 0px 0px 1px,var(--bb-palette-gray100, #000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-3:hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-3:hover:active {
  background-color: var(--bb-palette-white800, #000000);
}

.emotion-7 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-10 {
  margin-left: 0.5em;
  margin-right: -0.25em;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-DropdownMenu"
>
  <button
    aria-controls="test"
    aria-expanded="false"
    aria-haspopup="menu"
    class="emotion-3 emotion-1 emotion-2 emotion-6 bb-Box bb-DropdownMenuButton bb-Button"
    type="button"
  >
    Actions
    <svg
      aria-hidden="true"
      class="emotion-7 emotion-1 emotion-2 emotion-10 bb-ButtonIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 448 512"
    >
      <path
        d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;
